--- a/sacos-cycling-fe/package.json
+++ b/sacos-cycling-fe/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@nuxt/http": "^0.5.11",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
