--- a/sacos-cycling-fe/package.json
+++ b/sacos-cycling-fe/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxt/http": "^0.5.11",
+    "bulma": "^0.9.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
