--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --config-file='dev-nuxt.config.js'",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
+    "axios": "^0.20.0",
     "gh-pages": "^3.1.0"
   }
 }
