--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt --config-file='dev-nuxt.config.js'",
+    "windev": "nuxt --config-file=dev-nuxt.config.js",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -14,11 +15,12 @@
     "@nuxt/http": "^0.5.11",
     "bulma": "^0.9.0",
     "bulma-accordion": "^2.0.1",
-    "nuxt": "^2.14.0"
+    "nuxt": "^2.14.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0"
   }
 }
