--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -t true"
   },
   "dependencies": {
     "@creativebulma/bulma-collapsible": "^1.0.4",
@@ -16,9 +16,8 @@
     "@splidejs/vue-splide": "^0.3.5",
     "bulma": "^0.9.0",
     "bulma-accordion": "^2.0.1",
+    "bulma-carousel": "^4.0.4",
     "nuxt": "^2.14.0",
-    "slick-carousel": "^1.8.1",
-    "vue-tiny-slider": "^0.1.39",
     "vueperslides": "^2.12.1"
   },
   "devDependencies": {
